Adding log for debugging test failure on Windows